# cyber-fm

./: CMakeLists.txt  README.md  desktopfile.cpp  desktopfile.h  dirselection.cpp  dirselection.h  fileitem.cpp  fileitem.h  folderlistmodel.cpp  folderlistmodel.h  main.cpp  placesmodel.cpp  placesmodel.h  qml.qrc  xdgdesktopfile.cpp  xdgmimeapps.cpp  xdgmimeapps.h
qml/: BrowserMenu.qml  BrowserView.qml  ExecPromptDialog.qml  FileMenu.qml  FolderGridView.qml  FolderIconDelegate.qml  FolderIconView.qml  FolderItemMenu.qml  FolderListDelegate.qml  FolderListView.qml  FolderMenu.qml  FolderPage.qml  GlobalSettings.qml  IconButton.qml  ItemMenu.qml  PathBar.qml  SideBar.qml  SidebarItem.qml  main.qml
src/: fm.cpp  fmh.cpp  fmlist.cpp  fmstatic.cpp  fmstatic.h  handy.cpp  handy.h  main.cpp  mauilist.h  mauimodel.h  pathlist.h  placeslist.cpp
translations/: ar_AA.ts  az_AZ.ts  cs_CZ.ts  de_DE.ts  el_GR.ts  en_US.ts  es_ES.ts  es_MX.ts  et_EE.ts  fa_IR.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hu_HU.ts  id_ID.ts  it_IT.ts  ja_JP.ts  lt_LT.ts  ml_IN.ts  nb_NO.ts  ne_NP.ts  nl_NL.ts  pl_PL.ts  pt_BR.ts  ro_RO.ts  ru.ts  ru_RU.ts  si_LK.ts  sr_RS.ts  th_TH.ts  tr_TR.ts  uk_UA.ts  yue.ts  yue_HK.ts  zh_CN.ts  zh_HK.ts  zh_Hans.ts  zh_Hant.ts  zh_TW.ts
